--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,5 +23,33 @@ h1, h2 {
 
 #logo {
     float: left;
+    /*float behaves like a block. The one that follows moves next to it at the same height*/
     font-size: 280%;
+}
+/*menu-links*/
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+
+#menu, #logo {
+    line-height: 75px;
+}
+
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;
+}
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
 }
