add style to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,3 +212,24 @@ hr {
 #times h2 {
     color: #fafafa;
 }
+
+/*footer*/
+
+#footer {
+    height: 150px;
+}
+
+.socail-networks {
+    text-align: center;
+}
+
+.socail-networks li {
+    display: inline;
+}
+
+.socail-networks i {
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: #3a3a3a;
+}
