--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,3 +246,47 @@ hr {
 #photos > img {
     width: 100%;
 }
+
+/*Media queries*/
+
+/*everything coded in ths area is only applied for those screens. For lager screens wide and down*/
+@media screen and (max-width: 1200px) {
+    #club-ethos {
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    #welcome {
+        padding: 30px 0;
+        margin: 0;
+    }
+
+    #left-about, #right-about {
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    #center-about {
+        clear: both;
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    hr {
+        display: none;
+    } 
+}
+
+/*For medium screens from 950px wide and down*/
+@media screen and (max-width: 950px) {
+    #menu { 
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+}
