--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,4 +321,13 @@ hr {
         padding: 0 20px;
     }
 
+    #photos {
+        column-count: 3;
+    }
+
+}
+/* For smaler screen sizes than 800px */
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
 }
